# os-idea

./: .gitattributes  .gitignore  Cargo.toml  README.md
init/: Cargo.toml
init/src/: main.rs
xtask/: Cargo.toml  kernel-builder-Dockerfile
xtask/src/: build_kernel.rs  disk_image.rs  main.rs
