[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
bollard = { version = "0.21.0", default-features = false, features = ["pipe"] }
cpio = "0.4.1"
fatfs = "0.3.6"
flate2 = "1.0"
fscommon = "0.1.1"
futures-util = "0.3.32"
gpt = "4.0"
tar = "0.4.45"
tokio = { version = "1.52", features = ["rt-multi-thread"] }
uuid = "1"
